# cxxutils

./: .gitignore  .tasklist.el  CMakeLists.txt  Gruntfile.js  LICENSE
CMake/: SimplePkg.cmake
CMake/pkg/: CMakeSetup.cmake  Catch2.cmake  GameKernelCore.cmake  nlohmann_json.cmake  simpleunits.cmake  utf8proc.cmake
include/rpav/: algorithm.hpp  always_mut.hpp  any.hpp  any_ptr.hpp  bits.hpp  bitset.hpp  config.hpp  convert.hpp  convert_pd.hpp  ctti.hpp  dynamicscope.hpp  dynarray.hpp  easing.hpp  endian.hpp  enum.hpp  file.hpp  iterator.hpp  log.hpp  math.hpp  modify_track.hpp  observer.hpp  ptr.hpp  ringbuffer.hpp  span.hpp  str.hpp  tag.hpp  tidy.hpp  timer.hpp  type_pun.hpp  types.hpp  typeutil.hpp  unicode.hpp  util.hpp  valtypes.hpp  value.hpp  version.hpp
include/rpav/file/: simple_tfio.hpp
include/rpav/iterator/: adaptor.hpp  from.hpp  last.hpp  misc.hpp  reverse.hpp  with_iterator.hpp  zip.hpp
include/rpav/log/: ring.hpp
include/rpav/str/: bits.hpp  gk.hpp  glm.hpp  rpav.hpp  rpav_bitset.hpp  rpav_dynarray.hpp  rpav_ringbuffer.hpp  rpav_span.hpp  rpav_ustringview.hpp  simpleunits.hpp  std.hpp  std_function.hpp  std_list.hpp  std_map.hpp  std_utility.hpp  std_vector.hpp  tables.hpp
include/rpav/unicode/: defs.hpp  ustring.hpp  ustringview.hpp
include/rpav/util/: container.hpp  json.hpp  trace.hpp  variant.hpp
src/unicode/: ustring.cpp
t/: CMakeLists.txt  any.cpp  bits.cpp  channel.cpp  ctti.cpp  dynarray.cpp  easing.cpp  gk.cpp  iterator.cpp  json.cpp  math.cpp  modify_track.cpp  observer.cpp  ptr.cpp  ringbuffer.cpp  span.cpp  str_std.cpp  typeutil.cpp  ustring.cpp  var.cpp
t/fail/: CMakeLists.txt  fail_ptr_const1.cpp  fail_ptr_const2.cpp  fail_ptr_const3.cpp
